--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,8 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+
+# my own files and import algoritm
+lib/screen/welcome.dart
+lib/provider/
